--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
+        <!-- https -->
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <!-- inter google font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
