added loading gif

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         placeholder="Enter title"
                         aria-label="Title of movie or tv-series"
                         >
+                    <div class="loading" id="loading"></div>
                     <button id="search-btn">Search</button>
                 </div>
             </div>
